<resources>
    <string name="app_name">Uddvodok Ecomarce App</string>
    <string name="intro_first_line">"There Is No Finish Online"</string>
    <string name="intro_secound_line">Absolutely. Positively. Perfect.</string>
    <string name="btn_login">User Login Here </string>
    <string name="btn_user_signup">New User ? Registration here </string>
    <string name="btn_become_seller">Become a Seller ! </string>
    <string name="enter_emil">Enter Email  </string>
    <string name="enter_password">Enter Password  </string>
    <string name="user_login">USER LOGIN </string>
    <string name="create_account">NEW USER REGISTRATION </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number </string>
    <string name="btn_register">Register  </string>
    <string name="already_account" > Already Have Account ! Login Now  </string>


</resources>
