<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_first_line"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp"
            android:layout_marginTop="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_secound_line"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:textAllCaps="true"
            android:layout_marginLeft="20dp"
            />

        <Button
            android:id="@+id/btnuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="40sp"
            android:text="@string/btn_login"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"


            />
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:text="@string/btn_user_signup"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10sp"


            />
        <Button
            android:id="@+id/seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnseller"
            android:layout_marginTop="10sp"
            android:text="@string/btn_become_seller"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"


            />













    </LinearLayout>




</LinearLayout>