<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screenbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/userlogintxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:layout_marginLeft="70sp"
            android:layout_marginRight="90sp"
            android:textColor="@color/colorYellow"


            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/useremail"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_emil"
        android:textColor="@color/colorYellow"

        />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userpsw"
                android:inputType="numberPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorYellow"
                android:textSize="22sp"
                />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:background="@drawable/btnloginbg"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginBottom="10sp"

/>
        <TextView
            android:id="@+id/btn_or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorLink="@color/colorYellow"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:layout_marginLeft="150dp"
            />
        <TextView
            android:id="@+id/txt_signup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_signup"
            android:textSize="20sp"
            android:paddingLeft="2sp"
            android:textStyle="bold"
            android:textColorLink="@color/colorYellow"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"

            />
    </LinearLayout>

</LinearLayout>